# mcp-m365-mgmt

./: .env.template  .gitignore  AUTHENTICATION.md  CHANGELOG.md  CMDS.md  DEPLOYMENT.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  TOOLS-SUMMARY.md  chat_test.py  mcp_m365_mgmt.py  pyproject.toml  requirements.txt  setup.py  test_client.py
mcp/: mcp.json
